# teach-computer-vision

./: .gitignore
facedet/: CMakeLists.txt  facedet.cpp
loading-saving/: CMakeLists.txt  videos.cpp
track/: CMakeLists.txt  bgsub.cpp  bgsubmog.cpp  track.cpp  track.py
trans-filters/: CMakeLists.txt  affine.cpp  blur.cpp  convolve.cpp  dilate.cpp  erode.cpp  perspective.cpp  remap.cpp
